--- a/index.css
+++ b/index.css
@@ -100,10 +100,7 @@ input {
 }
 
 .folder__input {
-  width: 0;
-  height: 0;
-  opacity: 0;
-  visibility: hidden;
+  display: none;
 }
 
 .folder__button {
