--- a/index.css
+++ b/index.css
@@ -30,11 +30,19 @@ body,
 }
 
 label {
-  font-size: 12px;
+  font-size: 14px;
+  line-height: 16px;
 }
 
 input {
-  font-size: 12px;
+  font-size: 13px;
+  line-height: 16px;
+}
+
+input[type=checkbox] {
+  font-size: 16px;
+  margin: 0;
+  vertical-align: top;
 }
 
 .spinner {
@@ -46,14 +54,13 @@ input {
 }
 
 .button {
-  height: 19px;
   border: none;
   background-color: #fff;
   border-radius: 3px;
-  box-shadow: 0 0.5px 1px 0 rgba(0, 0, 0, 0.27), 0 0 0 0.5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.5px 1px 0 rgba(0, 0, 0, 0.4), 0 0 0 0.5px rgba(0, 0, 0, 0.2);
   color: #262626;
   font-size: 12px;
-  line-height: 19px;
+  line-height: 17px;
   font-weight: 500;
   padding: 0 15px;
 }
@@ -92,9 +99,8 @@ input {
   flex: 1;
   background-color: #fff;
   box-shadow: inset 0 0 0 0.5px rgba(0, 0, 0, 0.05);
-  border: solid 0.5px rgba(0, 0, 0, 0.25);
+  border: solid 1px #bbb;
   padding: 2px 3px;
-  height: 19px;
   margin-right: 4px;
   vertical-align: top;
 }
@@ -122,7 +128,7 @@ input {
 .controls {
   display: flex;
   justify-content: flex-end;
-  min-height: 20px;
+  min-height: 22px;
   margin-bottom: 10px;
 }
 
